<resources>
    <string name="app_name">PlantDoctor</string>
    <string name="login_title">Welcome to PlantDoctor!</string>
    <string name="register_title">Join Us!</string>
    <string name="login_desc">Enter your username and password to proceed.</string>
    <string name="register_desc">Fill in the required details below, to proceed.</string>
    <string name="checkout_desc">Please enter your delivery and payment details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login"><u>Login</u></string>
    <string name="new_user_message">New to PlantDoctor?</string>
    <string name="existing_user_message">Already Registered?</string>
    <string name="register"><u>Register</u></string>
    <string name="log_out">Log out</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="learning">Learning</string>
    <string name="open_nav">Open Navigation Menu</string>
    <string name="close_nav">Close Navigation Menu</string>

    <string name="y_results">%s result(s)</string>
    <string name="view_details">View Details</string>
    <string name="name_colon">Name:</string>
    <string name="date_colon">Date:</string>
    <string name="view_diseases">View Diseases</string>
    <string name="general_information">General Information</string>
    <string name="predicted_disease">Predicted Disease</string>
    <string name="use_anonymously">Use Anonymously</string>
    <string name="upload_instruction">Click the \"Upload Image\" button to upload the leaf image. Prediction occurs once image is selected.</string>
    <string name="symptoms">Symptoms</string>
    <string name="cause">Cause</string>
    <string name="propagation">Propagation</string>
    <string name="control">Control</string>
</resources>