<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_item"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/history_item"
            android:icon="@drawable/baseline_view_list_24"
            android:title="@string/history" />

        <item
            android:id="@+id/learning_item"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/learning" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/log_out"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>